Fixed page break

--- a/doc/handheld-resistive-probe/handheld-resistive-probe-manual.tex
+++ b/doc/handheld-resistive-probe/handheld-resistive-probe-manual.tex
@@ -306,6 +306,7 @@ Measured across a $50 \Omega$ line.
 \end{figure}
 \FloatBarrier
 
+\pagebreak
 \subsection{Input Impedance}
 
 \begin{figure}[h!]
