Minor formatting fixes to manual

--- a/doc/handheld-resistive-probe/handheld-resistive-probe-manual.tex
+++ b/doc/handheld-resistive-probe/handheld-resistive-probe-manual.tex
@@ -10,6 +10,7 @@
 \usepackage{makecell}
 \usepackage{colortbl}
 \usepackage{gensymb}
+\usepackage{textcomp}
 %\usepackage[osf]{libertine}
 \usepackage{zi4}
 \usepackage{float}
@@ -76,7 +77,7 @@ The current location of design files as of this writing is: \url{https://www.git
 
 \subsection{Sponsors}
 
-Development and prototyping of this probe was made possibly by support from Symbiotic EDA
+Development and prototyping of this probe was made possible by support from Symbiotic EDA
 (\url{https://www.symbioticeda.com/})
 
 \includegraphics[height=2cm]{symbiotic-logo.png}
@@ -166,8 +167,8 @@ Use of accessories with larger or smaller diameters may damage the socket and vo
 The top ground terminal is 8 mm above and 12 mm to the rear of the signal connection, and the tip-mounted ground
 terminal is 2.5mm below the signal connection.
 
-Antikernel Labs recommends use of PMK Tetris\textregistered series replacement probe tips and ground accessories.
-These may be ordered through Antikernel Labs or any PMK distributor.
+Antikernel Labs recommends use of PMK Tetris\textsuperscript{\textregistered} series replacement probe tips and ground
+accessories. These may be ordered through Antikernel Labs or any PMK distributor.
 
 Standard PMK accessories supplied with the AKL-PT1 are:
 \begin{itemize}
@@ -179,9 +180,9 @@ Standard PMK accessories supplied with the AKL-PT1 are:
 
 The PMK 893-250-00T 2-footed probe positioner is included with the pro edition probe.
 
-Antikernel Labs believes the AKL-PT1 is compatible with PMK's full range of Tetris\textregistered tips and ground
-accessories, however testing has not been conducted with all possible accessories and Antikernel Labs assumes no
-liability for incompatibility with any accessories not listed in this document.
+Antikernel Labs believes the AKL-PT1 is compatible with PMK's full range of Tetris\textsuperscript{\textregistered}
+tips and ground accessories, however testing has not been conducted with all possible accessories and Antikernel Labs
+assumes no liability for incompatibility with any accessories not listed in this document.
 
 \subsection{Cables}
 
